--- a/scikit-learn4.4.1 前処理.ipynb
+++ b/scikit-learn4.4.1 前処理.ipynb
@@ -11,6 +11,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### `前処理のライブラリ、モジュールまとめ`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| No. | ライブラリ | モジュール | クラス | 関数 | import  | 処理区分 | 説明 |\n",
+    "| ----- | ----------- | ------------ | ------- | -------- | : ---- | -----------| ------|\n",
+    "| 1| - | - | - | dropna() |-  | DataFrame、２節で確認 | 欠損値の削除|\n",
+    "| 2| sklearn | preprocessing | Imputer | fit()<br>transform() | from sklearn.preprocessing import Imputer | 前処理-欠損値の補完 | 欠損値の補完|\n",
+    "| 3| sklearn | preprocessing | LabelEncoder | fit()<br>transform() | from sklearn.preprocessing import LabelEncoder | 前処理-ラベルエンコーディング | カテゴリ変数のエンコーディング実行|\n",
+    "| 4| sklearn | preprocessing | OneHotEncoder | fit_transform() | from sklearn.preprocessing import OneHotEncoder | 前処理-One-hotエンコーディング | One-hotエンコーディングを実行|\n",
+    "| 5| sklearn | preprocessing | StandardScaler | fit()<br>transform()  | from sklearn.preprocessing import StandardScaler | 前処理-特徴量正規化-分散正規化 | fit:平均と標準偏差求める<br>transform:分散正規化を実行|\n",
+    "| 6| sklearn | preprocessing | MinMaxScaler | fit()<br>transform() | from sklearn.preprocessing import MinMaxScaler | 前処理-特徴量正規化-最小最大正規化 | fit:正規化した値を求める<br>transform:最小最大正規化を実行|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 欠損値への対応\n",
     "- 欠損値への対応\n",
     "- カテゴリ変数のエンコーディング\n",
@@ -19,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +113,7 @@
        "4  5.0  10.0  15"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +208,7 @@
        "4  False  False  False"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +279,7 @@
        "4  5.0  10.0  15"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +305,7 @@
        "       [ 5.  , 10.  , 15.  ]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,6 +314,7 @@
     "from sklearn.preprocessing import Imputer\n",
     "\n",
     "# 平均値で欠損値を補完するインスタンスを作成する\n",
+    "# strategy : 欠損値を補完する方法を文字列で指定　,axis :補完する値を計算するときに使用する軸を指定、　１：行、0：列（デフォルト） \n",
     "imp = Imputer(strategy ='mean',axis = 0)\n",
     " # 欠損値を補完する\n",
     "imp.fit(df)\n",
@@ -313,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +402,7 @@
        "4  5  c"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +427,7 @@
        "array([0, 1, 0, 1, 2])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +454,7 @@
        "array(['a', 'b', 'c'], dtype=object)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +479,7 @@
        "       [0., 0., 1., 5.]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,8 +496,10 @@
     "df_one['B'] = le.fit_transform(df['B'])\n",
     "\n",
     "# One-hotエンコーディングのインスタンス化\n",
+    "# categorical_features ： 変換する列の番号（リスト型）\n",
     "one = OneHotEncoder(categorical_features=[1])\n",
     "# One-hotエンコーディング\n",
+    "# fit_transformの返した疎行列をNumｐｙ配列に変換するのは toarray()\n",
     "one.fit_transform(df_one).toarray()\n"
    ]
   },
@@ -493,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +584,7 @@
        "4  5  800"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +615,7 @@
        "       [ 1.41421356,  1.63299316]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +646,7 @@
        "       [1.        , 1.        ]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
