--- a/scikit-learn4.4.5-4.4.7 モデルの評価、ハイパーパラメータ、クラスタリング.ipynb
+++ b/scikit-learn4.4.5-4.4.7 モデルの評価、ハイパーパラメータ、クラスタリング.ipynb
@@ -4,21 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `データモデル評価、ハイパーパラメータ、クラスタリングのまとめ`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### `データモデル評価、ハイパーパラメータ、クラスタリングのまとめ`\n",
+    "\n",
     "| No.| ライブラリ | モジュール | クラス | 関数 | import  | 処理区分 | 説明 |\n",
     "| ----| ----------- | ------------ | ------- | -------- |  :-------  | -----------| ------|\n",
-    "| 1| sklearn | metrics | - | classification_report() | from sklearn.metrics import classification_report | モデルの評価 | 予測結果の適合率、再現率、F値を出力|\n",
-    "| 2| sklearn | model_selection | - | cross_val_score() | from sklearn.model_selection import cross_val_score | モデルの評価 | 層化K分割交差検証を実行|\n",
+    "| 1| sklearn | metrics | - | classification_report(実績、予測) | from sklearn.metrics import classification_report | モデルの評価 | 予測結果の適合率、再現率、F値を出力|\n",
+    "| 2| sklearn | model_selection | - | cross_val_score(isvc, X, y, 交差件数,評価指標') | from sklearn.model_selection import cross_val_score | モデルの評価 | 層化K分割交差検証を実行|\n",
     "| 3| sklearn | metrics | - | roc_auc_score() | from sklearn.metrics import roc_auc_score | モデルの評価 | AUC計算|\n",
-    "| 4| sklearn | model_selection | GridSearchCV | best_params_<br>best_estimator_ | from sklearn.model_selection import GridSearchCV | ハイパーパラメータ | K分割交差検証を実行し、最適パラメタを確認|\n",
-    "| 5| sklearn | cluster | KMeans | fit_predict() | from sklearn.cluster import KMeans |クラスタリング |k-meansクラスタリングを実行|\n",
-    "| 6| sklearn | cluster | AgglomerativeClustering | fit_predict() | from sklearn.cluster import AgglomerativeClustering |クラスタリング |凝集型の階層クラスタリングを実行|\n",
+    "| 4| sklearn | model_selection | GridSearchCV(i決定木, 深さ配列, 交差件数) | best_params_<br>best_estimator_ | from sklearn.model_selection import GridSearchCV | ハイパーパラメータ | K分割交差検証を実行し、最適パラメタを確認|\n",
+    "| 5| sklearn | cluster | KMeans(クラスタ数, init = 'random', 交差数,random_state=123) | fit_predict() | from sklearn.cluster import KMeans |クラスタリング |k-meansクラスタリングを実行|\n",
+    "| 6| sklearn | cluster | AgglomerativeClustering(クラスタ数,ユーグリッド, linkage) | fit_predict() | from sklearn.cluster import AgglomerativeClustering |クラスタリング |凝集型の階層クラスタリングを実行|\n",
     "| 7| scipy | cluster | hierarchy | dendrogram() | from scipy.cluster.hierarchy import dendrogram |クラスタリング |樹形図を描画|"
    ]
   },
@@ -139,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 説明:precision =   reca 適合率、recall=再現率、 f1-score= F値、   support=データの件数、0:クラス0、１:クラス1"
+    "#### 説明:precision = 適合率、recall=再現率、 f1-score= F値、   support=データの件数、0:クラス0、１:クラス1"
    ]
   },
   {
@@ -333,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +346,7 @@
        "       refit=True, return_train_score='warn', scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,16 +375,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'max_depth': 3}"
+       "{'max_depth': 4}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,13 +396,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=3,\n",
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=5,\n",
        "            max_features=None, max_leaf_nodes=None,\n",
        "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "            min_samples_leaf=1, min_samples_split=2,\n",
@@ -415,7 +410,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
