--- a/NumPy4.1.1-4.1.3 行列データ扱い.ipynb
+++ b/NumPy4.1.1-4.1.3 行列データ扱い.ipynb
@@ -11,7 +11,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### `各種命令`\n",
+    "\n",
+    "| No| 命令 | 説明 | 書き方 | 例 | 備考 |\n",
+    "|:---:|:---:|:---|:---|:---|:---|\n",
+    "| 01 | array | 配列を生成 | array(リスト、タプルなど) | `np.array([1, 2, 3])`<br>`np.array([[1, 2, 3], [4, 5, 6]])` | np.array(range(1, 3))と同様 |\n",
+    "| 02 | dtype | 要素の型を確認 |配列.dtype | `x = np.array([1, 2, 3])`<br>`x.dtype` | - |\n",
+    "| 03 | shape | 配列の構造を調べる | 配列.shape | `x.shape` | - |\n",
+    "| 04 | size | 全体の要素数を調べる | 配列.size | `x.size`  | - |\n",
+    "| 05 | append | 配列に要素を追加 | append(元の配列, 追加する要素, ※axis) | `y = np.append(x, [4, 5, 6])` | 行を追加するならaxis=0、列を追加するならaxis=1 |\n",
+    "| 06 | insert | 配列に要素を挿入 | insert(配列, インデックス, 値)  | `y = np.insert(x, 1, '8')` | - |\n",
+    "| 07 | delete | 配列の要素を削除 | delete(配列, インデックス) | `y = np.delete(x, 0)` | - |\n",
+    "| 08 | reshape | 配列の次元を変換する | reshape(1次元目の要素数, 2次元目の要素数,…) | `y = x.reshape(2, -1`) | 要素数に-1:他の次元の要素数から計算して自動設定 |\n",
+    "| 09 | インデックス番号 | 配列の要素にアクセス | 書き方：[開始:終了:間隔] | `print(x[1::2])` | - |\n",
+    "| 10 | 条件演算式 | 配列の要素を条件式で抽出 | 書き方：配列[条件] | `print(x[x > 5])` | - |\n",
+    "| 11 | inspace | 等間隔な数列を生成する | np.linspace(開始, 終了, num=数列数) | `np.linspace(0, 10, num=101)` | -|\n",
+    "| 12 | random.rand<br>random.randn | 乱数を生成する | random.rand(要素数, 次元数) | `np.random.rand(10, 1)` | rand：一様乱数<br>randn：標準正規分布乱数 |\n",
+    "| 13 | shuffle | 配列の要素を混ぜる | shuffle(配列) | `np.random.shuffle(x)` | - |\n",
+    "| 14 | sort | 配列を並び替える | sort(配列) | `y = np.sort(x)` | - |\n",
+    "| 15 | vstack | 配列同士を結合する | vstack((配列1, 配列2, …)) | `np.vstack((x, y, …))` | - |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4.1.1 NumPyの概要\n",
+    "### NumPyとは\n",
+    "- NumPyは、Pythonで数値計算を効率的に行うためのライブラリです。NumPyはオープンソースで公開されており、個人／商用問わず、誰でも無料で利用することができます。\n",
+    "\n",
+    "- NumPyを使うと、ベクトルや行列などの多次元配列の処理を容易に行うことができるようになります。またPythonだけで数値計算を行うのと比較して、非常に高速に処理を行うことができます（NumPyの内部はC、及びFortranというプログラム言語で実装されています）。\n",
+    "\n",
+    "- 機械学習は、多次元配列に対して演算を行いながらモデルを学習していきます。NumPyを使うとそのような処理が効率的に行えるようになるため、Pythonで機械学習を行うには、NumPyは必須のライブラリとなっています。\n",
+    " \n",
+    "\n",
+    "### NumPyの使い方\n",
+    "- NumPyをインポート方法\n",
+    "`import numpy as np`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4.1.2 NumPyでデータを扱う"
    ]
   },
