--- a/pandas4.2.7.ipynb
+++ b/pandas4.2.7.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,246 +89,21 @@
        "      <td>4.888083</td>\n",
        "      <td>Mid</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-06</th>\n",
-       "      <td>2017-04-06</td>\n",
-       "      <td>7593</td>\n",
-       "      <td>1800.0</td>\n",
-       "      <td>4.218333</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-07</th>\n",
-       "      <td>2017-04-07</td>\n",
-       "      <td>9320</td>\n",
-       "      <td>1940.0</td>\n",
-       "      <td>4.804124</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-08</th>\n",
-       "      <td>2017-04-08</td>\n",
-       "      <td>4873</td>\n",
-       "      <td>2300.0</td>\n",
-       "      <td>2.118696</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-09</th>\n",
-       "      <td>2017-04-09</td>\n",
-       "      <td>12045</td>\n",
-       "      <td>1950.0</td>\n",
-       "      <td>6.176923</td>\n",
-       "      <td>High</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-10</th>\n",
-       "      <td>2017-04-10</td>\n",
-       "      <td>7493</td>\n",
-       "      <td>1850.0</td>\n",
-       "      <td>4.050270</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-11</th>\n",
-       "      <td>2017-04-11</td>\n",
-       "      <td>7289</td>\n",
-       "      <td>1930.0</td>\n",
-       "      <td>3.776684</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-12</th>\n",
-       "      <td>2017-04-12</td>\n",
-       "      <td>6481</td>\n",
-       "      <td>2300.0</td>\n",
-       "      <td>2.817826</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-13</th>\n",
-       "      <td>2017-04-13</td>\n",
-       "      <td>10287</td>\n",
-       "      <td>1800.0</td>\n",
-       "      <td>5.715000</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-14</th>\n",
-       "      <td>2017-04-14</td>\n",
-       "      <td>8043</td>\n",
-       "      <td>1940.0</td>\n",
-       "      <td>4.145876</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-15</th>\n",
-       "      <td>2017-04-15</td>\n",
-       "      <td>7435</td>\n",
-       "      <td>2300.0</td>\n",
-       "      <td>3.232609</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-16</th>\n",
-       "      <td>2017-04-16</td>\n",
-       "      <td>7529</td>\n",
-       "      <td>2300.0</td>\n",
-       "      <td>3.273478</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-17</th>\n",
-       "      <td>2017-04-17</td>\n",
-       "      <td>8031</td>\n",
-       "      <td>1940.0</td>\n",
-       "      <td>4.139691</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-18</th>\n",
-       "      <td>2017-04-18</td>\n",
-       "      <td>8475</td>\n",
-       "      <td>2300.0</td>\n",
-       "      <td>3.684783</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-19</th>\n",
-       "      <td>2017-04-19</td>\n",
-       "      <td>8132</td>\n",
-       "      <td>1950.0</td>\n",
-       "      <td>4.170256</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-20</th>\n",
-       "      <td>2017-04-20</td>\n",
-       "      <td>15328</td>\n",
-       "      <td>1800.0</td>\n",
-       "      <td>8.515556</td>\n",
-       "      <td>High</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-21</th>\n",
-       "      <td>2017-04-21</td>\n",
-       "      <td>12849</td>\n",
-       "      <td>1940.0</td>\n",
-       "      <td>6.623196</td>\n",
-       "      <td>High</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-22</th>\n",
-       "      <td>2017-04-22</td>\n",
-       "      <td>4029</td>\n",
-       "      <td>2300.0</td>\n",
-       "      <td>1.751739</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-23</th>\n",
-       "      <td>2017-04-23</td>\n",
-       "      <td>3890</td>\n",
-       "      <td>1950.0</td>\n",
-       "      <td>1.994872</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-24</th>\n",
-       "      <td>2017-04-24</td>\n",
-       "      <td>8093</td>\n",
-       "      <td>1850.0</td>\n",
-       "      <td>4.374595</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-25</th>\n",
-       "      <td>2017-04-25</td>\n",
-       "      <td>7823</td>\n",
-       "      <td>1950.0</td>\n",
-       "      <td>4.011795</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-26</th>\n",
-       "      <td>2017-04-26</td>\n",
-       "      <td>7492</td>\n",
-       "      <td>1850.0</td>\n",
-       "      <td>4.049730</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-27</th>\n",
-       "      <td>2017-04-27</td>\n",
-       "      <td>7203</td>\n",
-       "      <td>1930.0</td>\n",
-       "      <td>3.732124</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-28</th>\n",
-       "      <td>2017-04-28</td>\n",
-       "      <td>7302</td>\n",
-       "      <td>1850.0</td>\n",
-       "      <td>3.947027</td>\n",
-       "      <td>Mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-29</th>\n",
-       "      <td>2017-04-29</td>\n",
-       "      <td>6033</td>\n",
-       "      <td>2300.0</td>\n",
-       "      <td>2.623043</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-04-30</th>\n",
-       "      <td>2017-04-30</td>\n",
-       "      <td>4093</td>\n",
-       "      <td>1950.0</td>\n",
-       "      <td>2.098974</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    日付     歩数  摂取カロリー   歩数/カロリー  運動指数\n",
-       "date                                                 \n",
-       "2017-04-01  2017-04-01   5439  2500.0  2.175600   Low\n",
-       "2017-04-02  2017-04-02   2510  2300.0  1.091304   Low\n",
-       "2017-04-03  2017-04-03  10238  1950.0  5.250256   Mid\n",
-       "2017-04-04  2017-04-04   8209  1850.0  4.437297   Mid\n",
-       "2017-04-05  2017-04-05   9434  1930.0  4.888083   Mid\n",
-       "2017-04-06  2017-04-06   7593  1800.0  4.218333   Mid\n",
-       "2017-04-07  2017-04-07   9320  1940.0  4.804124   Mid\n",
-       "2017-04-08  2017-04-08   4873  2300.0  2.118696   Low\n",
-       "2017-04-09  2017-04-09  12045  1950.0  6.176923  High\n",
-       "2017-04-10  2017-04-10   7493  1850.0  4.050270   Mid\n",
-       "2017-04-11  2017-04-11   7289  1930.0  3.776684   Mid\n",
-       "2017-04-12  2017-04-12   6481  2300.0  2.817826   Low\n",
-       "2017-04-13  2017-04-13  10287  1800.0  5.715000   Mid\n",
-       "2017-04-14  2017-04-14   8043  1940.0  4.145876   Mid\n",
-       "2017-04-15  2017-04-15   7435  2300.0  3.232609   Mid\n",
-       "2017-04-16  2017-04-16   7529  2300.0  3.273478   Mid\n",
-       "2017-04-17  2017-04-17   8031  1940.0  4.139691   Mid\n",
-       "2017-04-18  2017-04-18   8475  2300.0  3.684783   Mid\n",
-       "2017-04-19  2017-04-19   8132  1950.0  4.170256   Mid\n",
-       "2017-04-20  2017-04-20  15328  1800.0  8.515556  High\n",
-       "2017-04-21  2017-04-21  12849  1940.0  6.623196  High\n",
-       "2017-04-22  2017-04-22   4029  2300.0  1.751739   Low\n",
-       "2017-04-23  2017-04-23   3890  1950.0  1.994872   Low\n",
-       "2017-04-24  2017-04-24   8093  1850.0  4.374595   Mid\n",
-       "2017-04-25  2017-04-25   7823  1950.0  4.011795   Mid\n",
-       "2017-04-26  2017-04-26   7492  1850.0  4.049730   Mid\n",
-       "2017-04-27  2017-04-27   7203  1930.0  3.732124   Mid\n",
-       "2017-04-28  2017-04-28   7302  1850.0  3.947027   Mid\n",
-       "2017-04-29  2017-04-29   6033  2300.0  2.623043   Low\n",
-       "2017-04-30  2017-04-30   4093  1950.0  2.098974   Low"
+       "                    日付     歩数  摂取カロリー   歩数/カロリー 運動指数\n",
+       "date                                                \n",
+       "2017-04-01  2017-04-01   5439  2500.0  2.175600  Low\n",
+       "2017-04-02  2017-04-02   2510  2300.0  1.091304  Low\n",
+       "2017-04-03  2017-04-03  10238  1950.0  5.250256  Mid\n",
+       "2017-04-04  2017-04-04   8209  1850.0  4.437297  Mid\n",
+       "2017-04-05  2017-04-05   9434  1930.0  4.888083  Mid"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +112,7 @@
     "import pandas as pd\n",
     "# データ読み取り\n",
     "df = pd.read_pickle(\"data/df_201704headlth.pickle\")\n",
-    "df"
+    "df.head()"
    ]
   },
   {
