--- a/scikit-learn4.4.1 前処理.ipynb
+++ b/scikit-learn4.4.1 前処理.ipynb
@@ -4,20 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.4.1 前処理"
+    "# 4.4 scilit-learn"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `前処理のライブラリ、モジュールまとめ`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### `前処理のライブラリ、モジュールまとめ`\n",
+    "\n",
     "| No. | ライブラリ | モジュール | クラス | 関数 | import  | 処理区分 | 説明 |\n",
     "| ----- | ----------- | ------------ | ------- | -------- | : ---- | -----------| ------|\n",
     "| 1| - | - | - | dropna() |-  | DataFrame、２節で確認 | 欠損値の削除|\n",
@@ -32,6 +27,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 4.4.1 前処理"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 欠損値への対応\n",
     "- 欠損値への対応\n",
     "- カテゴリ変数のエンコーディング\n",
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +115,7 @@
        "4  5.0  10.0  15"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +210,7 @@
        "4  False  False  False"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +281,7 @@
        "4  5.0  10.0  15"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +307,7 @@
        "       [ 5.  , 10.  , 15.  ]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -402,13 +404,12 @@
        "4  5  c"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "df = pd.DataFrame({\n",
     "    'A':[1,2,3,4,5],\n",
     "    'B':['a','b','a','b','c']\n",
@@ -418,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +428,7 @@
        "array([0, 1, 0, 1, 2])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +455,7 @@
        "array(['a', 'b', 'c'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +480,7 @@
        "       [0., 0., 1., 5.]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,14 +511,14 @@
     "### 特徴量の正規化\n",
     "- 特徴量の大きさを揃える処理\n",
     "- 分散正規化\n",
-    " - 特徴量の平均は０、標準偏差が1となるように特徴量を変換する処理\n",
+    " - 特徴量の平均は０、標準偏差が1となるように特徴量を変換する処理<span style=\"color: red; \">←模擬試験1_4-4 ①</span>\n",
     "- 最小最大正規化\n",
     " - 特徴量の最小値が０、最大値が１をとるように特徴量を正規化する処理"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -584,14 +585,12 @@
        "4  5  800"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "# DataFrameデータを生成\n",
     "df = pd.DataFrame({\n",
     "    'A':[1,2,3,4,5],\n",
