--- a/scikit-learn4.4.2-4.4.4 分類、回帰、次元削減.ipynb
+++ b/scikit-learn4.4.2-4.4.4 分類、回帰、次元削減.ipynb
@@ -4,41 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `データ処理(教師あり(分類、回帰)、教師なし(次元削減、主成分分析))のまとめ`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### `データ処理(教師あり(分類、回帰)、教師なし(次元削減、主成分分析))のまとめ`\n",
+    "\n",
     "| No.| ライブラリ | モジュール | クラス | 関数 | import  | 処理区分 | 説明 |\n",
     "| ----| ----------- | ------------ | ------- | -------- |  :-------  | -----------| ------|\n",
     "| 1| sklearn | datasets | load_iris | data/target | from sklearn.datasets import load_iris | Irisデータセット | 150枚のアヤメの「がく」「花びら」の長さとあ幅、花の種類|\n",
     "| 2| sklearn | model_selection | - | train_test_split() | from sklearn.model_selection import train_test_split | データ処理 | 学習データとテストデータを分割|\n",
-    "| 3| sklearn | svm | SVC| - | from sklearn.svm import SVC | 分類 | サポートベクタマシン学習|\n",
+    "| 3| sklearn | svm | SVC(kernel, C)| fit() //学習<br>predict()//予測| from sklearn.svm import SVC | 分類 | カーネル、マージン設定の広さ|\n",
     "| 4| - | - | -| - | matplotlib.axes.Axes.contour() | 分類 | 決定境界とマージンをプロット|\n",
-    "| 5| sklearn | tree | DecisionTreeClassifier | fit()//学習<br>predict()//予測| from sklearn.tree import DecisionTreeClassifier | 分類 | 決定木|\n",
+    "| 5| sklearn | tree | DecisionTreeClassifier(max_depth=3) | fit()//学習<br>predict()//予測| from sklearn.tree import DecisionTreeClassifier | 分類 | max_depth：決定木の深さ|\n",
     "| 6| pydotplus | - | - | graph_from_dot_data() | from pydotplus import graph_from_dot_data | 分類 | 決定木を可視化するためのライブラリ<br>関数はグラフを表すオブジェクトを生成|\n",
     "| 7| sklearn | tree | - | export_graphviz() | from sklearn.tree import export_graphviz | 分類 | 決定木の可視化ツール<br>(dot形式のデータを抽出)|\n",
-    "| 8| sklearn | ensemble | RandomForestClassifier | fit()//学習<br>predict()//予測 | from sklearn.ensemble import RandomForestClassifier | 分類 | ランダムフォレスト|\n",
-    "| 9| sklearn | linear_model | LinearRegression | fit()//学習<br>predict()//予測 | from sklearn.linear_model import LinearRegression | 回帰 | 線形回帰|\n",
-    "| 10| sklearn | decomposition | PCA | fit_transform() | from sklearn.decomposition import PCA | 次元削減 | 主成分分析を実行|"
+    "| 8| sklearn | ensemble | RandomForestClassifier(n,m) | fit()//学習<br>predict()//予測 | from sklearn.ensemble import RandomForestClassifier | 分類 | n:決定数、ランダムフォレスト|\n",
+    "| 9| sklearn | linear_model |  LinearRegression() | fit()//学習<br>predict()//予測 | from sklearn.linear_model import LinearRegression | 回帰 | 線形回帰|\n",
+    "| 10| sklearn | decomposition | PCA(n_components=2) | fit_transform() | from sklearn.decomposition import PCA | 次元削減 | n_components：たな２変数に変換主成分分析を実行|"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.4.2 分類"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 1.サポートベクタマシン\n",
-    "- 2.決定木\n",
-    "- 3.ランダムフォレスト"
+    "## 4.4.2 分類\n",
+    "* 分類はデータの「クラス」を予測して分けるタスク\n",
+    "* 教師あり学習の典型的なタスク\n",
+    "* 「教師学習」とはクラスが既知のデータを教師として利用し各データをタスクに振り分ける<span style=\"color: red; \">←模擬試験1_4-4 ②</span>\n",
+    "* 分類のアルゴリズム\n",
+    " * 1.サポートベクタマシン\n",
+    " * 2.決定木\n",
+    " * 3.ランダムフォレスト"
    ]
   },
   {
@@ -51,24 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X:\n",
-      "[[5.1 3.5 1.4 0.2]\n",
-      " [4.9 3.  1.4 0.2]\n",
-      " [4.7 3.2 1.3 0.2]\n",
-      " [4.6 3.1 1.5 0.2]\n",
-      " [5.  3.6 1.4 0.2]]\n",
-      "y:\n",
-      "[0 0 0 0 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# データセットの準備\n",
     "from sklearn.datasets import load_iris\n",
@@ -76,17 +54,51 @@
     "# Irisデータセットの読み込み\n",
     "iris = load_iris()\n",
     "x, y = iris.data, iris.target\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.1 3.5 1.4 0.2]\n",
+      " [4.9 3.  1.4 0.2]\n",
+      " [4.7 3.2 1.3 0.2]\n",
+      " [4.6 3.1 1.5 0.2]\n",
+      " [5.  3.6 1.4 0.2]]\n"
+     ]
+    }
+   ],
+   "source": [
     "#　頭５行を表示\n",
-    "print('X:')\n",
-    "print(x[:5,:])\n",
-    "print('y:')\n",
-    "print(y[:5])"
+    "print(x[:5,:])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -113,6 +125,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -125,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +169,7 @@
     "y0 = np.repeat(0,100)\n",
     "# X軸Y軸共に-1から0までの一様分布から100点をサンプリング\n",
     "X1 = np.random.uniform(-1.0,0.0,size=(100,2))\n",
-    "# クラス0のラベルを100個生成\n",
+    "# クラス1のラベルを100個生成\n",
     "y1 = np.repeat(1,100)\n",
     "\n",
     "# 散布図にプロット\n",
@@ -166,12 +185,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5671198321066371"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X0 = np.random.uniform(size=(100,2))\n",
+    "X0[99,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
-    "# 学習、および決定協会、マージン、サポートベクタを可視化する関数\n",
+    "# 学習、および決定境界、マージン、サポートベクタを可視化する関数\n",
     "def plot_boundary_margin_sv(X0, y0, X1, y1, kernel, C, xmin=-1, xmax=1, ymin=-1, ymax=1):\n",
     "    # サポートベクタマシンのインスタンス化\n",
     "    svc = SVC(kernel=kernel, C=C)\n",
@@ -181,7 +221,7 @@
     "    fig, ax = plt.subplots()\n",
     "    ax.scatter(X0[:, 0], X0[:, 1], marker='o', label='class 0')\n",
     "    ax.scatter(X1[:, 0], X1[:, 1], marker='x', label='class 1')\n",
-    "    # 決定協会とマージンをプロット\n",
+    "    # 決定境界とマージンをプロット\n",
     "    xx, yy = np.meshgrid(np.linspace(xmin, xmax, 100), np.linspace(ymin, ymax, 100))\n",
     "    xy = np.vstack([xx.ravel(), yy.ravel()]).T\n",
     "    p = svc.decision_function(xy).reshape((100, 100))\n",
@@ -201,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -238,13 +278,13 @@
     }
    ],
    "source": [
-    "# 狭く設定設定\n",
+    "# C小さいマージンが程広く、大きい程マージン狭く\n",
     "plot_boundary_margin_sv(X0,y0,X1,y1,kernel='linear',C=0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -297,12 +337,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ２、決定木"
+    "## ２、決定木\n",
+    "* 情報利得 ー　データを分割ことによってどれだけ得をする　情報利得は大きくなれば決定木は綺麗になる\n",
+    "* 不純度 ー どれだけクラスが混在している　不純度下がるほどクラスを綺麗になる\n",
+    "* 情報利得 = 親ノードでの不純度 - 子ノードでの不純度の合計\n",
+    "* 不純度の指標\n",
+    " * ジニ不純度\n",
+    " * エントロピー\n",
+    " * 分類誤差\n",
+    "* ジニ不純度 ー各ノードに間違ったクラスが振り分けられてしまう確率"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -316,14 +364,12 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.datasets import load_iris\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "# Iris データを読み込み\n",
@@ -335,6 +381,30 @@
     "tree = DecisionTreeClassifier(max_depth=3)\n",
     "# 学習\n",
     "tree.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 2, 1, 0, 2, 1, 0, 0, 1, 2, 0, 1, 2, 2, 2, 0, 0, 1, 0, 0, 2,\n",
+       "       0, 2, 0, 0, 0, 2, 2, 0, 2, 2, 0, 0, 1, 1, 2, 0, 0, 1, 1, 0, 2, 2,\n",
+       "       2])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 予測\n",
+    "y_pred = tree.predict(X_test)\n",
+    "y_test"
    ]
   },
   {
@@ -377,34 +447,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2, 2, 1, 0, 2, 1, 0, 0, 1, 2, 0, 1, 2, 2, 2, 0, 0, 1, 0, 0, 2,\n",
-       "       0, 2, 0, 0, 0, 2, 2, 0, 2, 2, 0, 0, 1, 1, 2, 0, 0, 1, 1, 0, 2, 2,\n",
-       "       2])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 予測\n",
-    "y_pred = tree.predict(X_test)\n",
-    "y_test"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ３、ランダムフォレスト"
+    "## ３、ランダムフォレスト\n",
+    "* データサンプルをランダムで選択し決定木を構築　←複数回繰り返す →各木の結果の多数決や平均値より分類と回帰を行う\n",
+    "* ブートストラップデータ　ー　ランダムで選択したデータサンプル\n",
+    "* アンサンブル学習　ー　複数の学習機を用いた学習方法　"
    ]
   },
   {
@@ -457,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +515,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,12 +540,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([15. , 26.6, 45.4, 20.8, 34.9, 21.9, 28.7,  7.2, 20. , 32.2, 24.1,\n",
+       "       18.5, 13.5, 27. , 23.1, 18.9, 24.5, 43.1, 19.8, 13.8, 15.6, 50. ,\n",
+       "       37.2, 46. , 50. , 21.2, 14.9, 19.6, 19.4, 18.6, 26.5, 32. , 10.9,\n",
+       "       20. , 21.4, 31. , 25. , 15.4, 13.1, 37.6, 37. , 18.9, 27.9, 50. ,\n",
+       "       14.4, 22. , 19.9, 21.6, 15.6, 15. , 32.4, 29.6, 20.4, 12.3, 19.1,\n",
+       "       14.9, 17.8,  8.8, 35.4, 11.5, 19.6, 20.6, 15.6, 19.9, 23.3, 22.3,\n",
+       "       24.8, 16.1, 22.8, 30.5, 20.4, 24.4, 16.6, 26.2, 16.4, 20.1, 13.9,\n",
+       "       19.4, 22.8, 13.8, 31.6, 10.5, 23.8, 22.4, 19.3, 22.2, 12.6, 19.4,\n",
+       "       22.2, 29.8,  9.6, 34.9, 21.4, 25.3, 32.9, 26.6, 14.6, 31.5, 23.3,\n",
+       "       33.3, 17.5, 19.1, 48.5, 17.1, 23.1, 28.4, 18.9, 13. , 17.2, 24.1,\n",
+       "       18.5, 21.8, 13.3, 23. , 14.1, 23.9, 24. , 17.2, 21.5, 19.1, 20.8,\n",
+       "       36. , 20.1,  8.7, 13.6, 22. , 22.2, 21.1, 13.4, 17.4, 20.1, 10.2,\n",
+       "       23.1, 10.2, 13.1, 14.3, 14.5,  7.2, 19.6, 20.6, 22.7, 26.4,  7.5,\n",
+       "       20.3, 50. ,  8.5, 20.3, 16.1, 22. , 19.6, 10.2, 23.2])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# テストデータセットを予測\n",
-    "y_pred = lr.predict(X_test)"
+    "y_pred = lr.predict(X_test)\n",
+    "y_test"
    ]
   },
   {
