--- a/NumPy4.1.1-4.1.2 行列データ扱い.ipynb
+++ b/NumPy4.1.1-4.1.2 行列データ扱い.ipynb
@@ -23,10 +23,10 @@
     "| 06 | dtype | 要素のデータ型を確認 |配列.dtype | `x.dtype` |dtype('int64')を返す、Numpyの由来のデータかた  |\n",
     "| 07 | インデックス、スライス | 配列の要素にアクセス | 書き方：[開始:終了:間隔] | `x[2],y[:,2]` | - |\n",
     "| 08 | arange |配列を返す | 書き方：np.arange(n,m,k)] | `np.arange(1,11,2)` | 引数1:開始位置、引数2:終了位置、引数3：スキップ |\n",
-    "| 09 | random.random | 乱数を生成する | random.rand(タプル) | `np.random.random((2,3)` | ある範囲の乱数 |\n",
+    "| 09 | random.random | 乱数を生成する | random.rand(タプル) | `np.random.random((2,3))` | ある範囲の乱数 |\n",
     "| 10 | random.rand | 乱数を生成する | random.rand(要素数, 次元数) | `np.random.rand(10, 1)` | rand：結果はrandomと同じ |\n",
-    "| 11 | random.randint | 乱数を生成する | random.rand(要素数, 次元数) | `np.random.rand(10, 1)` | ある範囲の任意の整数 |\n",
-    "| 12 | random.uniform | 乱数を生成する | random.uniform(開始, 終了,サイズ) | `np.random.uniform(o.o,o.5, size=(2,3))` | デフォルトは0〜1の小数点数を返す |\n",
+    "| 11 | random.randint | 乱数を生成する | random.randint(要素数, 次元数) | `np.random.randint(10, 1)` | ある範囲の任意の整数 |\n",
+    "| 12 | random.uniform | 乱数を生成する | random.uniform(開始, 終了,サイズ) | `np.random.uniform(0.0,0.5, size=(2,3))` | デフォルトは0〜1の小数点数を返す |\n",
     "| 13 | random.randn | 乱数を生成する | random.randn要素数, 次元数) | `np.random.randn(2, 4)` | 標準正規分布乱数 |\n",
     "| 14 | random.randnormal | 乱数を生成する | random.randnomal(要素数, 次元数,サイズ) | `np.random.rand(2, 4,3)` | 標準正規分布乱数、サイズを指定できる |\n",
     "| 15 | zeros | 全てoのデータを生成 | np.zeros(要素数) | `np.zeros(2)` | - |\n",
@@ -39,8 +39,8 @@
     "| 22 | concatenate | 配列を結合 | np.concatenate(配列) | `np.concatenate([a,a1],axis=1)` | axis=1は列方向結合 |\n",
     "| 23 | hstack | 配列を結合（列方向） | np.hstack(配列) | `np.hstack([b,b1])` | - |\n",
     "| 24 | vstack | 配列を結合（行方向） | np.vstack(配列) | `np.vstack([b,b2])` | - |\n",
-    "| 25 | hsplit | 配列を分割（列方向） | np.vstack(分割する配列,１個の列数) | `np.hsplit(b3,[2])` | - |\n",
-    "| 26 | vstack | 配列を分割（行方向） | np.vstack(分割する配列,個目の行数) | `np.vstack([b3,[2])` | - |\n",
+    "| 25 | hsplit | 配列を分割（列方向） | np.hsplit(分割する配列,１個の列数) | `np.hsplit(b3,[2])` | - |\n",
+    "| 26 | vsplit | 配列を分割（行方向） | np.vsplit(分割する配列,個目の行数) | `np.vsplit([b3,[2])` | - |\n",
     "| 27 | T | 配列の行列の逆転する | np.T | `array([[1, 2, 8], [4, 5, 8]]).T` | [1,2,8]は1番目の列,[4,5,8]は2番目の列になる|\n",
     "| 28 | newaxis | 次元追加（行と列） | np.newaxis | `a[np.newaxis, :]` | 例で行方向次元追加|\n",
     "| 29 | meshgrid | グリットデータ作成 | np.meshgrid(配列,配列) | `np.meshgrid(m,n)` | - |"
