--- a/Numpy4.1.3 Numpyの各機能.ipynb
+++ b/Numpy4.1.3 Numpyの各機能.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +102,29 @@
     "    for k in j:\n",
     "        new[i].append(abs(k))\n",
     "new"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `各種命令`\n",
+    "\n",
+    "| No| 命令 | 説明 | 書き方 | 例 | 備考 |\n",
+    "|:---:|:---:|:---|:---|:---|:---|\n",
+    "| 01 | abs() | 配列の要素を一括変換(絶対値を取る) | np.abs(配列) | `x=np.abs([1, 2, 3,4]) | 配列の要素の絶対値を返す |\n",
+    "| 02 | sin() | sin関数を実行 | np.sin(配列) | `x=np.sin(e) | - |\n",
+    "| 03 | cos() | cos関数を実行 | np.cos(配列) | `x=np.cos(e) | - |\n",
+    "| 04 | log() | ネイピア数が底にする自然対数log計算 | np.log(配列) | `x=np.log(a) | - |\n",
+    "| 05 | log10() | 10が底にする自然対数log計算 | np.log10(配列) | `x=np.log10(a) | - |\n",
+    "| 06 | exp() | eのx乗を表示 | np.exp(配列) | `x=np.exp(a) | - |\n",
+    "| 07 | dot() | ドット積を計算 | np.dot(配列,配列) | `x=np.dot(a,b) | a@bと同様 |\n",
+    "| 08 | count_nonzero() | 0ではない要素数を出力 | np.count_nonzero(式) | `x=np.count_nonzero(a > 0) | - |\n",
+    "| 09 | sum() | 0ではない要素数を出力 | np.count_nonzero(式) | `x=np.count_nonzero(a > 0) | - |\n",
+    "| 010| count_nonzero() | 0ではない要素数を出力 | np.sum(式) | `x=np.sum(a > 0) | true:1 false:0で計算されるのでcount_nonzero()と同じ |\n",
+    "| 011| any() | trueが含まれているかを確認 | np.any(式) | `x=np.any(a > 0) | - |\n",
+    "| 012| all() | 全ての要素をtrueかを確認 | np.all(式) | `x=np.all(a > 0) | - |\n",
+    "| 013| allclose() | 全ての要素同じかどうか/誤差範囲 | np.allclose(配列,配列,atol=10) | `x=np.allcloe(a,b,alot=10) | - |"
    ]
   },
   {
@@ -569,28 +592,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-4,  5])"
+       "array([0, 1, 2])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# a =[0,1,2] x b=[[-3,-2,-1],[0,1,2]] = [(0x(-3)+1x(-2)+2x(-1)),0x0+1x1+2x2]=[-4,5]\n",
-    "np.dot(b, a)"
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-3, -2, -1],\n",
+       "       [ 0,  1,  2]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -599,16 +642,104 @@
        "array([-4,  5])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2x3 行列 ＊ 1x3行列 = 1x2行列\n",
+    "# a =[0,1,2] x b=[[-3,-2,-1],[0,1,2]] = [(0x(-3)+1x(-2)+2x(-1)),0x0+1x1+2x2]=[-4,5]\n",
+    "\n",
+    "np.dot(b, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-4,  5])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b @ a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (3,) and (2,3) not aligned: 3 (dim 0) != 2 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-c9cc415545b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: shapes (3,) and (2,3) not aligned: 3 (dim 0) != 2 (dim 0)"
+     ]
+    }
+   ],
+   "source": [
+    "# 1x3 行列 ＊ 2x3行列 = ValueError\n",
+    "np.dot(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'type'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-d35c1f87cc81>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'type'"
+     ]
     }
    ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -8, -14],\n",
+       "       [ 10,  13]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2x3 行列 ＊ 3x2行列 = 2x2行列\n",
+    "b @ d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -619,12 +750,13 @@
        "       [-12,  -3,   6]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 3x2 行列 ＊ 2x3行列 = 3x3行列\n",
     "d @ b"
    ]
   },
