--- a/pandas4.2.5-4.2.7 欠損値処理、データ連結、統計データ扱い.ipynb
+++ b/pandas4.2.5-4.2.7 欠損値処理、データ連結、統計データ扱い.ipynb
@@ -26,6 +26,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `データ連結`　　　　 <span style=\"color: blue; \">pd.concat([df1,df2],axis =0) axis=1列、axis=0行</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `基本統計量`\n",
+    "\n",
+    "|No.|関数|説明|\n",
+    "|----|----|-----|\n",
+    "|1|df.max()|最大値|\n",
+    "|2|df.min()|最大値|\n",
+    "|3|df.mode()|最頻値|\n",
+    "|4|df.mean()|平均値|\n",
+    "|5|df.median()|中央値|\n",
+    "|6|df.std()|標準偏差|\n",
+    "|7|df.count()|件数確認|\n",
+    "|8|df.describe()|統計量をまとめて出力|\n",
+    "|9|df.corr()|相関係数|\n",
+    "|10|df.values|DF→numpyに変換|"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -793,13 +820,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.2.6 データ連結"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -907,6 +927,13 @@
     "# 欠損値に１つ前の値を補完\n",
     "df_201705_fill =df_201705.fillna(method='ffill')\n",
     "df_201705_fill"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.2.6 データ連結"
    ]
   },
   {
