--- a/try.ipynb
+++ b/try.ipynb
@@ -345,6 +345,405 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame([[40,\"a\",True],[20,\"b\",False],[30,\"c\",False]])\n",
+    "df.index=[\"01\",\"02\",\"03\"]\n",
+    "df.columns=[\"A\",\"B\",\"C\"]\n",
+    "df\n",
+    "\n",
+    "def judge(arg):\n",
+    "    if arg <50:\n",
+    "        return \"low\"\n",
+    "    elif arg <70:\n",
+    "        return \"middle\"\n",
+    "    else:\n",
+    "        return \"high\"\n",
+    "df.loc[:,\"C\"]  = df.iloc[:,0] *2\n",
+    "df.loc[:,\"B\"] = df.iloc[:,2].apply(judge)\n",
+    "_=df[\"C\"] >50\n",
+    "df=df[_]\n",
+    "df.iloc[0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'middle'"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[1,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rand</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-04-01</th>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-04-08</th>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-04-15</th>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-04-22</th>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-04-29</th>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-05-06</th>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-05-13</th>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-05-20</th>\n",
+       "      <td>133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-05-27</th>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-06-03</th>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-06-10</th>\n",
+       "      <td>124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-06-17</th>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-06-24</th>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-01</th>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-08</th>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-15</th>\n",
+       "      <td>135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-22</th>\n",
+       "      <td>109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-29</th>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-05</th>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-12</th>\n",
+       "      <td>122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-19</th>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-26</th>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-02</th>\n",
+       "      <td>126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-09</th>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-16</th>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-23</th>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-30</th>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-10-07</th>\n",
+       "      <td>149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-10-14</th>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-10-21</th>\n",
+       "      <td>126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-10-28</th>\n",
+       "      <td>107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-11-04</th>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-11-11</th>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-11-18</th>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-11-25</th>\n",
+       "      <td>122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-12-02</th>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-12-09</th>\n",
+       "      <td>174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-12-16</th>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-12-23</th>\n",
+       "      <td>146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-12-30</th>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-06</th>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-13</th>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-20</th>\n",
+       "      <td>127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-27</th>\n",
+       "      <td>121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-02-03</th>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-02-10</th>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-02-17</th>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-02-24</th>\n",
+       "      <td>132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-03</th>\n",
+       "      <td>105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-10</th>\n",
+       "      <td>139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-17</th>\n",
+       "      <td>149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-24</th>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-31</th>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            rand\n",
+       "2017-04-01    14\n",
+       "2017-04-08    91\n",
+       "2017-04-15   114\n",
+       "2017-04-22    89\n",
+       "2017-04-29    91\n",
+       "2017-05-06    84\n",
+       "2017-05-13   110\n",
+       "2017-05-20   133\n",
+       "2017-05-27    70\n",
+       "2017-06-03    83\n",
+       "2017-06-10   124\n",
+       "2017-06-17   119\n",
+       "2017-06-24    94\n",
+       "2017-07-01   116\n",
+       "2017-07-08   116\n",
+       "2017-07-15   135\n",
+       "2017-07-22   109\n",
+       "2017-07-29    61\n",
+       "2017-08-05   108\n",
+       "2017-08-12   122\n",
+       "2017-08-19    87\n",
+       "2017-08-26    99\n",
+       "2017-09-02   126\n",
+       "2017-09-09    70\n",
+       "2017-09-16   106\n",
+       "2017-09-23    94\n",
+       "2017-09-30   110\n",
+       "2017-10-07   149\n",
+       "2017-10-14    63\n",
+       "2017-10-21   126\n",
+       "2017-10-28   107\n",
+       "2017-11-04    98\n",
+       "2017-11-11    97\n",
+       "2017-11-18   100\n",
+       "2017-11-25   122\n",
+       "2017-12-02   120\n",
+       "2017-12-09   174\n",
+       "2017-12-16   114\n",
+       "2017-12-23   146\n",
+       "2017-12-30    95\n",
+       "2018-01-06    97\n",
+       "2018-01-13    73\n",
+       "2018-01-20   127\n",
+       "2018-01-27   121\n",
+       "2018-02-03    86\n",
+       "2018-02-10    50\n",
+       "2018-02-17    76\n",
+       "2018-02-24   132\n",
+       "2018-03-03   105\n",
+       "2018-03-10   139\n",
+       "2018-03-17   149\n",
+       "2018-03-24   114\n",
+       "2018-03-31   101"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "np.random.seed(123)\n",
+    "\n",
+    "dates = pd.date_range(start=\"2017-04-01\", periods=365)\n",
+    "\n",
+    "df = pd.DataFrame(np.random.randint(1,31,365),index =dates,columns=[\"rand\"])\n",
+    "df_year = pd.DataFrame(df.groupby(pd.Grouper(freq=\"W-SAT\")).sum(),columns=[\"rand\"])\n",
+    "df_year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.718281828459045 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.full((1, 5), np.e).T.ravel()\n",
+    "b = np.linspace(0, 1, 5)\n",
+    "c = np.hstack([a, b])\n",
+    "print(a[-1], c[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
