--- a/数学基礎.ipynb
+++ b/数学基礎.ipynb
@@ -28,15 +28,60 @@
     "* tanθ =sinθ/consθ\n",
     "\n",
     "### 双曲線関数\n",
+    "\n",
     "### ベクトル\n",
+    "\n",
     "### ノルム\n",
+    "\n",
     "### ユークリッド距離\n",
+    "* x2 =a2+b2 \n",
+    "\n",
     "### マンハッタン距離\n",
+    "* x=a+b\n",
+    "\n",
     "### 内積\n",
+    "* a =x1y1+x2y2 \n",
+    "\n",
     "### 単位行列\n",
+    "* 対角線の値は１他の値は0になる正方行列\n",
+    "\n",
     "### 微分と積分\n",
+    "* 積分は面積\n",
+    "* 積分は傾き\n",
+    "\n",
+    "### 定積分\n",
+    "* 積分の範囲が決まっているいる　(0 < x < a)\n",
+    "\n",
+    "### 不定積分\n",
+    "* 積分の範囲が未定\n",
+    "* 積分定数とも呼ぶ\n",
+    "* 微分すると0\n",
+    "* Cで表記\n",
+    "\n",
+    "### 偏微分\n",
+    "* 2つ以上の変数を持つ多変数関数の微分を偏微分という \n",
+    "\n",
     "### 原始関数と導関数\n",
-    "### 確率\n",
+    "* F(x)を微分してf(x)を得た場合　Fはfの原始関数、\n",
+    "* fをFの導関数と呼ぶ\n",
+    "\n",
+    "### 確率の代表値\n",
+    "* 最小値(minimum)：データの中から最も小さい値\n",
+    "* 最大値(maximum)：データの中から最も大きい値\n",
+    "* 平均値(mean)：データの合計/データの\n",
+    "* 中央値(median)：小さいから並べて真ん中にくる値\n",
+    "* 最頻値(mode)：頻繁に出た値\n",
+    " * 分位数、４分位数  =>25 50 75 100\n",
+    "* 分散：分散は全てのデータの平均値からのズレを2乗にしてデータの個数で割った値\n",
+    "* 標準偏差はそれの平方根\n",
+    "\n",
+    "\n",
+    "### 確率密度関数\n",
+    "* 確率変数が離散的な場合\n",
+    "\n",
+    "### 確率質量関数\n",
+    "* 確率変数が連続的な場合\n",
+    "\n",
     "### 相関係数\n",
     "### 条件付き確率\n",
     "### ベイズの定理\n",
