--- a/pandas4.2.1-4.2.2 概要、データ取得.ipynb
+++ b/pandas4.2.1-4.2.2 概要、データ取得.ipynb
@@ -64,7 +64,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas\n",
+      "  Downloading pandas-2.0.3-cp311-cp311-win_amd64.whl (10.6 MB)\n",
+      "                                              0.0/10.6 MB ? eta -:--:--\n",
+      "                                              0.1/10.6 MB 3.6 MB/s eta 0:00:03\n",
+      "                                              0.2/10.6 MB 5.0 MB/s eta 0:00:03\n",
+      "     -                                        0.5/10.6 MB 4.5 MB/s eta 0:00:03\n",
+      "     ---                                      0.8/10.6 MB 4.8 MB/s eta 0:00:03\n",
+      "     ----                                     1.1/10.6 MB 5.1 MB/s eta 0:00:02\n",
+      "     ------                                   1.6/10.6 MB 6.0 MB/s eta 0:00:02\n",
+      "     ------                                   1.8/10.6 MB 6.5 MB/s eta 0:00:02\n",
+      "     ---------                                2.4/10.6 MB 6.7 MB/s eta 0:00:02\n",
+      "     ----------                               2.8/10.6 MB 7.2 MB/s eta 0:00:02\n",
+      "     ------------                             3.3/10.6 MB 7.2 MB/s eta 0:00:02\n",
+      "     -------------                            3.6/10.6 MB 7.5 MB/s eta 0:00:01\n",
+      "     ---------------                          4.0/10.6 MB 7.5 MB/s eta 0:00:01\n",
+      "     ----------------                         4.4/10.6 MB 7.6 MB/s eta 0:00:01\n",
+      "     -----------------                        4.7/10.6 MB 7.6 MB/s eta 0:00:01\n",
+      "     -------------------                      5.2/10.6 MB 7.7 MB/s eta 0:00:01\n",
+      "     --------------------                     5.5/10.6 MB 7.6 MB/s eta 0:00:01\n",
+      "     ----------------------                   6.0/10.6 MB 7.8 MB/s eta 0:00:01\n",
+      "     ------------------------                 6.5/10.6 MB 8.0 MB/s eta 0:00:01\n",
+      "     -------------------------                6.8/10.6 MB 7.9 MB/s eta 0:00:01\n",
+      "     --------------------------               7.1/10.6 MB 7.9 MB/s eta 0:00:01\n",
+      "     ---------------------------              7.4/10.6 MB 7.9 MB/s eta 0:00:01\n",
+      "     -----------------------------            7.8/10.6 MB 7.8 MB/s eta 0:00:01\n",
+      "     ------------------------------           8.1/10.6 MB 7.8 MB/s eta 0:00:01\n",
+      "     -------------------------------          8.5/10.6 MB 7.7 MB/s eta 0:00:01\n",
+      "     ---------------------------------        8.8/10.6 MB 7.9 MB/s eta 0:00:01\n",
+      "     ----------------------------------       9.3/10.6 MB 7.8 MB/s eta 0:00:01\n",
+      "     ------------------------------------     9.7/10.6 MB 7.8 MB/s eta 0:00:01\n",
+      "     -------------------------------------    10.0/10.6 MB 7.8 MB/s eta 0:00:01\n",
+      "     --------------------------------------   10.3/10.6 MB 7.8 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  10.6/10.6 MB 8.1 MB/s eta 0:00:01\n",
+      "     ---------------------------------------- 10.6/10.6 MB 7.9 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\bai21\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from pandas) (2.8.2)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Downloading pytz-2023.3-py2.py3-none-any.whl (502 kB)\n",
+      "                                              0.0/502.3 kB ? eta -:--:--\n",
+      "     ---------------------                  286.7/502.3 kB 8.6 MB/s eta 0:00:01\n",
+      "     -------------------------------------- 502.3/502.3 kB 6.2 MB/s eta 0:00:00\n",
+      "Collecting tzdata>=2022.1 (from pandas)\n",
+      "  Downloading tzdata-2023.3-py2.py3-none-any.whl (341 kB)\n",
+      "                                              0.0/341.8 kB ? eta -:--:--\n",
+      "     -------------------------------------- 341.8/341.8 kB 7.1 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\bai21\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from pandas) (1.25.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\bai21\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Installing collected packages: pytz, tzdata, pandas\n",
+      "Successfully installed pandas-2.0.3 pytz-2023.3 tzdata-2023.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +152,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1570,7 +1635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
