--- a/NumPy4.1.1-4.1.2 行列データ扱い.ipynb
+++ b/NumPy4.1.1-4.1.2 行列データ扱い.ipynb
@@ -80,7 +80,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting numpy\n",
+      "  Downloading numpy-1.25.0-cp311-cp311-win_amd64.whl (15.0 MB)\n",
+      "                                              0.0/15.0 MB ? eta -:--:--\n",
+      "                                              0.2/15.0 MB 4.6 MB/s eta 0:00:04\n",
+      "     -                                        0.6/15.0 MB 6.1 MB/s eta 0:00:03\n",
+      "     --                                       1.1/15.0 MB 7.9 MB/s eta 0:00:02\n",
+      "     ---                                      1.5/15.0 MB 7.8 MB/s eta 0:00:02\n",
+      "     ----                                     1.7/15.0 MB 7.5 MB/s eta 0:00:02\n",
+      "     -----                                    2.2/15.0 MB 7.8 MB/s eta 0:00:02\n",
+      "     -------                                  2.8/15.0 MB 8.4 MB/s eta 0:00:02\n",
+      "     --------                                 3.2/15.0 MB 8.5 MB/s eta 0:00:02\n",
+      "     ---------                                3.6/15.0 MB 8.6 MB/s eta 0:00:02\n",
+      "     ----------                               4.1/15.0 MB 8.8 MB/s eta 0:00:02\n",
+      "     -----------                              4.4/15.0 MB 9.0 MB/s eta 0:00:02\n",
+      "     -------------                            5.0/15.0 MB 9.2 MB/s eta 0:00:02\n",
+      "     --------------                           5.5/15.0 MB 9.3 MB/s eta 0:00:02\n",
+      "     --------------                           5.6/15.0 MB 8.6 MB/s eta 0:00:02\n",
+      "     ---------------                          5.8/15.0 MB 8.5 MB/s eta 0:00:02\n",
+      "     ----------------                         6.4/15.0 MB 8.7 MB/s eta 0:00:01\n",
+      "     -----------------                        6.7/15.0 MB 8.6 MB/s eta 0:00:01\n",
+      "     -------------------                      7.2/15.0 MB 8.7 MB/s eta 0:00:01\n",
+      "     --------------------                     7.6/15.0 MB 8.7 MB/s eta 0:00:01\n",
+      "     ---------------------                    7.9/15.0 MB 8.6 MB/s eta 0:00:01\n",
+      "     ----------------------                   8.5/15.0 MB 8.7 MB/s eta 0:00:01\n",
+      "     -----------------------                  8.8/15.0 MB 8.7 MB/s eta 0:00:01\n",
+      "     ------------------------                 9.4/15.0 MB 8.8 MB/s eta 0:00:01\n",
+      "     -------------------------                9.7/15.0 MB 8.7 MB/s eta 0:00:01\n",
+      "     ---------------------------              10.2/15.0 MB 8.8 MB/s eta 0:00:01\n",
+      "     ---------------------------              10.5/15.0 MB 8.8 MB/s eta 0:00:01\n",
+      "     -----------------------------            11.0/15.0 MB 9.0 MB/s eta 0:00:01\n",
+      "     ------------------------------           11.4/15.0 MB 8.8 MB/s eta 0:00:01\n",
+      "     -------------------------------          11.8/15.0 MB 9.0 MB/s eta 0:00:01\n",
+      "     --------------------------------         12.3/15.0 MB 9.1 MB/s eta 0:00:01\n",
+      "     ---------------------------------        12.6/15.0 MB 9.0 MB/s eta 0:00:01\n",
+      "     ----------------------------------       13.1/15.0 MB 8.8 MB/s eta 0:00:01\n",
+      "     -----------------------------------      13.3/15.0 MB 8.6 MB/s eta 0:00:01\n",
+      "     ------------------------------------     13.6/15.0 MB 8.6 MB/s eta 0:00:01\n",
+      "     -------------------------------------    14.0/15.0 MB 8.6 MB/s eta 0:00:01\n",
+      "     --------------------------------------   14.5/15.0 MB 8.5 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  15.0/15.0 MB 8.6 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  15.0/15.0 MB 8.5 MB/s eta 0:00:01\n",
+      "     ---------------------------------------- 15.0/15.0 MB 8.2 MB/s eta 0:00:00\n",
+      "Installing collected packages: numpy\n",
+      "Successfully installed numpy-1.25.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +159,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +199,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +220,7 @@
        "(3,)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +242,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +329,7 @@
        "array([0, 1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +351,7 @@
        "       [3, 4, 5]])"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +373,7 @@
        "array([0, 1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +395,7 @@
        "array([0, 1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,16 +408,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dtype('int64')"
+       "dtype('int32')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +438,7 @@
        "dtype('int16')"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +460,7 @@
        "dtype('float16')"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +489,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +509,7 @@
        "1"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +530,7 @@
        "array([2, 3])"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +551,7 @@
        "3"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +573,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +593,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +614,7 @@
        "2"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +635,7 @@
        "array([3, 6])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +656,7 @@
        "array([4, 5, 6])"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +677,7 @@
        "array([2, 3])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +699,7 @@
        "       [4, 6]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +726,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +746,7 @@
        "array([1, 2, 4])"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +768,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +789,7 @@
        "       [4, 5, 7]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +811,7 @@
        "       [4, 5, 8]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +833,7 @@
        "array([1, 2, 4])"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +854,7 @@
        "array([1, 5, 4])"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +875,7 @@
        "array([1, 5, 4])"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1949,7 +2010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
