--- a/scikit-learn4.4.1 前処理.ipynb
+++ b/scikit-learn4.4.1 前処理.ipynb
@@ -294,7 +294,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scikit-learn\n",
+      "  Downloading scikit_learn-1.3.0-cp311-cp311-win_amd64.whl (9.2 MB)\n",
+      "                                              0.0/9.2 MB ? eta -:--:--\n",
+      "     -                                        0.3/9.2 MB 5.2 MB/s eta 0:00:02\n",
+      "     --                                       0.5/9.2 MB 4.9 MB/s eta 0:00:02\n",
+      "     ---                                      0.9/9.2 MB 7.2 MB/s eta 0:00:02\n",
+      "     -----                                    1.3/9.2 MB 6.6 MB/s eta 0:00:02\n",
+      "     ------                                   1.4/9.2 MB 6.1 MB/s eta 0:00:02\n",
+      "     -------                                  1.8/9.2 MB 6.2 MB/s eta 0:00:02\n",
+      "     --------                                 2.0/9.2 MB 6.0 MB/s eta 0:00:02\n",
+      "     ----------                               2.3/9.2 MB 6.5 MB/s eta 0:00:02\n",
+      "     ----------                               2.4/9.2 MB 5.9 MB/s eta 0:00:02\n",
+      "     -----------                              2.7/9.2 MB 5.7 MB/s eta 0:00:02\n",
+      "     ------------                             2.9/9.2 MB 5.8 MB/s eta 0:00:02\n",
+      "     --------------                           3.2/9.2 MB 5.9 MB/s eta 0:00:02\n",
+      "     ---------------                          3.6/9.2 MB 6.0 MB/s eta 0:00:01\n",
+      "     -----------------                        4.1/9.2 MB 6.3 MB/s eta 0:00:01\n",
+      "     -------------------                      4.4/9.2 MB 6.4 MB/s eta 0:00:01\n",
+      "     --------------------                     4.8/9.2 MB 6.5 MB/s eta 0:00:01\n",
+      "     -----------------------                  5.3/9.2 MB 6.8 MB/s eta 0:00:01\n",
+      "     -----------------------                  5.4/9.2 MB 6.8 MB/s eta 0:00:01\n",
+      "     --------------------------               6.0/9.2 MB 6.8 MB/s eta 0:00:01\n",
+      "     ---------------------------              6.2/9.2 MB 6.8 MB/s eta 0:00:01\n",
+      "     -----------------------------            6.7/9.2 MB 6.9 MB/s eta 0:00:01\n",
+      "     ------------------------------           7.0/9.2 MB 6.8 MB/s eta 0:00:01\n",
+      "     -------------------------------          7.2/9.2 MB 6.7 MB/s eta 0:00:01\n",
+      "     ---------------------------------        7.6/9.2 MB 6.9 MB/s eta 0:00:01\n",
+      "     -----------------------------------      8.1/9.2 MB 7.0 MB/s eta 0:00:01\n",
+      "     -----------------------------------      8.2/9.2 MB 7.0 MB/s eta 0:00:01\n",
+      "     --------------------------------------   8.7/9.2 MB 7.0 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  9.0/9.2 MB 6.9 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  9.2/9.2 MB 7.0 MB/s eta 0:00:01\n",
+      "     ---------------------------------------- 9.2/9.2 MB 6.7 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\bai21\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from scikit-learn) (1.25.0)\n",
+      "Collecting scipy>=1.5.0 (from scikit-learn)\n",
+      "  Downloading scipy-1.11.1-cp311-cp311-win_amd64.whl (44.0 MB)\n",
+      "                                              0.0/44.0 MB ? eta -:--:--\n",
+      "                                              0.3/44.0 MB 19.8 MB/s eta 0:00:03\n",
+      "                                              0.7/44.0 MB 8.3 MB/s eta 0:00:06\n",
+      "                                              0.9/44.0 MB 6.8 MB/s eta 0:00:07\n",
+      "                                              1.0/44.0 MB 6.0 MB/s eta 0:00:08\n",
+      "     -                                        1.4/44.0 MB 6.2 MB/s eta 0:00:07\n",
+      "     -                                        1.5/44.0 MB 6.1 MB/s eta 0:00:07\n",
+      "     -                                        1.8/44.0 MB 5.7 MB/s eta 0:00:08\n",
+      "     -                                        2.2/44.0 MB 6.0 MB/s eta 0:00:07\n",
+      "     --                                       2.4/44.0 MB 6.0 MB/s eta 0:00:07\n",
+      "     --                                       2.5/44.0 MB 5.4 MB/s eta 0:00:08\n",
+      "     --                                       2.8/44.0 MB 5.6 MB/s eta 0:00:08\n",
+      "     --                                       3.2/44.0 MB 5.9 MB/s eta 0:00:07\n",
+      "     ---                                      3.6/44.0 MB 6.1 MB/s eta 0:00:07\n",
+      "     ---                                      4.0/44.0 MB 6.2 MB/s eta 0:00:07\n",
+      "     ---                                      4.1/44.0 MB 5.9 MB/s eta 0:00:07\n",
+      "     ---                                      4.2/44.0 MB 6.1 MB/s eta 0:00:07\n",
+      "     ---                                      4.4/44.0 MB 5.6 MB/s eta 0:00:08\n",
+      "     ----                                     4.7/44.0 MB 5.7 MB/s eta 0:00:07\n",
+      "     ----                                     5.0/44.0 MB 5.7 MB/s eta 0:00:07\n",
+      "     ----                                     5.3/44.0 MB 5.7 MB/s eta 0:00:07\n",
+      "     -----                                    5.7/44.0 MB 5.8 MB/s eta 0:00:07\n",
+      "     -----                                    6.1/44.0 MB 6.0 MB/s eta 0:00:07\n",
+      "     -----                                    6.4/44.0 MB 6.0 MB/s eta 0:00:07\n",
+      "     ------                                   6.8/44.0 MB 6.2 MB/s eta 0:00:07\n",
+      "     ------                                   7.2/44.0 MB 6.2 MB/s eta 0:00:06\n",
+      "     ------                                   7.6/44.0 MB 6.3 MB/s eta 0:00:06\n",
+      "     -------                                  8.0/44.0 MB 6.4 MB/s eta 0:00:06\n",
+      "     -------                                  8.4/44.0 MB 6.5 MB/s eta 0:00:06\n",
+      "     -------                                  8.8/44.0 MB 6.5 MB/s eta 0:00:06\n",
+      "     --------                                 9.2/44.0 MB 6.6 MB/s eta 0:00:06\n",
+      "     --------                                 9.6/44.0 MB 6.7 MB/s eta 0:00:06\n",
+      "     ---------                                10.0/44.0 MB 6.7 MB/s eta 0:00:06\n",
+      "     ---------                                10.5/44.0 MB 6.7 MB/s eta 0:00:05\n",
+      "     ---------                                10.8/44.0 MB 6.8 MB/s eta 0:00:05\n",
+      "     ----------                               11.2/44.0 MB 6.8 MB/s eta 0:00:05\n",
+      "     ----------                               11.6/44.0 MB 7.0 MB/s eta 0:00:05\n",
+      "     ----------                               11.9/44.0 MB 7.3 MB/s eta 0:00:05\n",
+      "     -----------                              12.5/44.0 MB 7.4 MB/s eta 0:00:05\n",
+      "     -----------                              12.7/44.0 MB 7.6 MB/s eta 0:00:05\n",
+      "     -----------                              12.9/44.0 MB 7.4 MB/s eta 0:00:05\n",
+      "     ------------                             13.2/44.0 MB 7.4 MB/s eta 0:00:05\n",
+      "     ------------                             13.6/44.0 MB 7.4 MB/s eta 0:00:05\n",
+      "     ------------                             14.0/44.0 MB 7.4 MB/s eta 0:00:05\n",
+      "     -------------                            14.4/44.0 MB 7.9 MB/s eta 0:00:04\n",
+      "     -------------                            14.8/44.0 MB 8.0 MB/s eta 0:00:04\n",
+      "     -------------                            15.1/44.0 MB 8.0 MB/s eta 0:00:04\n",
+      "     -------------                            15.4/44.0 MB 8.0 MB/s eta 0:00:04\n",
+      "     --------------                           15.7/44.0 MB 7.9 MB/s eta 0:00:04\n",
+      "     --------------                           16.2/44.0 MB 8.0 MB/s eta 0:00:04\n",
+      "     ---------------                          16.5/44.0 MB 8.1 MB/s eta 0:00:04\n",
+      "     ---------------                          17.0/44.0 MB 8.1 MB/s eta 0:00:04\n",
+      "     ---------------                          17.2/44.0 MB 8.0 MB/s eta 0:00:04\n",
+      "     ---------------                          17.6/44.0 MB 7.9 MB/s eta 0:00:04\n",
+      "     ----------------                         18.0/44.0 MB 7.9 MB/s eta 0:00:04\n",
+      "     ----------------                         18.4/44.0 MB 7.9 MB/s eta 0:00:04\n",
+      "     ----------------                         18.7/44.0 MB 7.9 MB/s eta 0:00:04\n",
+      "     -----------------                        19.1/44.0 MB 7.9 MB/s eta 0:00:04\n",
+      "     -----------------                        19.5/44.0 MB 7.9 MB/s eta 0:00:04\n",
+      "     ------------------                       19.9/44.0 MB 7.9 MB/s eta 0:00:04\n",
+      "     ------------------                       20.3/44.0 MB 7.9 MB/s eta 0:00:04\n",
+      "     ------------------                       20.6/44.0 MB 7.8 MB/s eta 0:00:03\n",
+      "     -------------------                      21.0/44.0 MB 7.8 MB/s eta 0:00:03\n",
+      "     -------------------                      21.2/44.0 MB 7.6 MB/s eta 0:00:03\n",
+      "     -------------------                      21.5/44.0 MB 7.7 MB/s eta 0:00:03\n",
+      "     -------------------                      21.8/44.0 MB 7.6 MB/s eta 0:00:03\n",
+      "     --------------------                     22.3/44.0 MB 7.6 MB/s eta 0:00:03\n",
+      "     --------------------                     22.8/44.0 MB 7.7 MB/s eta 0:00:03\n",
+      "     ---------------------                    23.1/44.0 MB 7.9 MB/s eta 0:00:03\n",
+      "     ---------------------                    23.5/44.0 MB 8.0 MB/s eta 0:00:03\n",
+      "     ---------------------                    24.0/44.0 MB 7.9 MB/s eta 0:00:03\n",
+      "     ----------------------                   24.4/44.0 MB 8.0 MB/s eta 0:00:03\n",
+      "     ----------------------                   24.8/44.0 MB 7.9 MB/s eta 0:00:03\n",
+      "     ----------------------                   25.3/44.0 MB 8.0 MB/s eta 0:00:03\n",
+      "     -----------------------                  25.6/44.0 MB 8.1 MB/s eta 0:00:03\n",
+      "     -----------------------                  25.9/44.0 MB 8.2 MB/s eta 0:00:03\n",
+      "     ------------------------                 26.4/44.0 MB 8.1 MB/s eta 0:00:03\n",
+      "     ------------------------                 26.9/44.0 MB 8.2 MB/s eta 0:00:03\n",
+      "     ------------------------                 27.2/44.0 MB 8.1 MB/s eta 0:00:03\n",
+      "     -------------------------                27.6/44.0 MB 8.3 MB/s eta 0:00:02\n",
+      "     -------------------------                28.2/44.0 MB 8.4 MB/s eta 0:00:02\n",
+      "     --------------------------               28.6/44.0 MB 8.5 MB/s eta 0:00:02\n",
+      "     --------------------------               29.1/44.0 MB 8.6 MB/s eta 0:00:02\n",
+      "     --------------------------               29.5/44.0 MB 8.5 MB/s eta 0:00:02\n",
+      "     ---------------------------              30.1/44.0 MB 8.7 MB/s eta 0:00:02\n",
+      "     ---------------------------              30.5/44.0 MB 8.7 MB/s eta 0:00:02\n",
+      "     ----------------------------             31.0/44.0 MB 8.8 MB/s eta 0:00:02\n",
+      "     ----------------------------             31.3/44.0 MB 8.8 MB/s eta 0:00:02\n",
+      "     ----------------------------             31.8/44.0 MB 9.2 MB/s eta 0:00:02\n",
+      "     -----------------------------            32.2/44.0 MB 9.2 MB/s eta 0:00:02\n",
+      "     -----------------------------            32.6/44.0 MB 9.1 MB/s eta 0:00:02\n",
+      "     -----------------------------            32.9/44.0 MB 9.1 MB/s eta 0:00:02\n",
+      "     ------------------------------           33.4/44.0 MB 9.1 MB/s eta 0:00:02\n",
+      "     ------------------------------           33.9/44.0 MB 9.2 MB/s eta 0:00:02\n",
+      "     -------------------------------          34.3/44.0 MB 9.2 MB/s eta 0:00:02\n",
+      "     -------------------------------          34.8/44.0 MB 9.2 MB/s eta 0:00:01\n",
+      "     --------------------------------         35.2/44.0 MB 9.4 MB/s eta 0:00:01\n",
+      "     --------------------------------         35.7/44.0 MB 9.4 MB/s eta 0:00:01\n",
+      "     --------------------------------         36.0/44.0 MB 9.4 MB/s eta 0:00:01\n",
+      "     ---------------------------------        36.4/44.0 MB 9.2 MB/s eta 0:00:01\n",
+      "     ---------------------------------        36.7/44.0 MB 9.2 MB/s eta 0:00:01\n",
+      "     ---------------------------------        37.1/44.0 MB 9.1 MB/s eta 0:00:01\n",
+      "     ----------------------------------       37.5/44.0 MB 9.1 MB/s eta 0:00:01\n",
+      "     ----------------------------------       37.7/44.0 MB 9.0 MB/s eta 0:00:01\n",
+      "     ----------------------------------       38.2/44.0 MB 9.0 MB/s eta 0:00:01\n",
+      "     -----------------------------------      38.5/44.0 MB 9.0 MB/s eta 0:00:01\n",
+      "     -----------------------------------      38.8/44.0 MB 8.7 MB/s eta 0:00:01\n",
+      "     -----------------------------------      39.1/44.0 MB 8.6 MB/s eta 0:00:01\n",
+      "     -----------------------------------      39.4/44.0 MB 8.5 MB/s eta 0:00:01\n",
+      "     ------------------------------------     39.9/44.0 MB 8.6 MB/s eta 0:00:01\n",
+      "     ------------------------------------     40.2/44.0 MB 8.4 MB/s eta 0:00:01\n",
+      "     ------------------------------------     40.6/44.0 MB 8.4 MB/s eta 0:00:01\n",
+      "     -------------------------------------    41.0/44.0 MB 8.3 MB/s eta 0:00:01\n",
+      "     -------------------------------------    41.4/44.0 MB 8.3 MB/s eta 0:00:01\n",
+      "     -------------------------------------    41.7/44.0 MB 8.3 MB/s eta 0:00:01\n",
+      "     --------------------------------------   42.0/44.0 MB 8.2 MB/s eta 0:00:01\n",
+      "     --------------------------------------   42.3/44.0 MB 8.2 MB/s eta 0:00:01\n",
+      "     --------------------------------------   42.8/44.0 MB 8.2 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  43.1/44.0 MB 8.2 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  43.6/44.0 MB 8.2 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  43.9/44.0 MB 8.1 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  44.0/44.0 MB 8.0 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  44.0/44.0 MB 8.0 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  44.0/44.0 MB 8.0 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  44.0/44.0 MB 8.0 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  44.0/44.0 MB 8.0 MB/s eta 0:00:01\n",
+      "     ---------------------------------------- 44.0/44.0 MB 6.6 MB/s eta 0:00:00\n",
+      "Collecting joblib>=1.1.1 (from scikit-learn)\n",
+      "  Downloading joblib-1.3.1-py3-none-any.whl (301 kB)\n",
+      "                                              0.0/302.0 kB ? eta -:--:--\n",
+      "     -------------------------------------- 302.0/302.0 kB 9.4 MB/s eta 0:00:00\n",
+      "Collecting threadpoolctl>=2.0.0 (from scikit-learn)\n",
+      "  Downloading threadpoolctl-3.1.0-py3-none-any.whl (14 kB)\n",
+      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn\n",
+      "Successfully installed joblib-1.3.1 scikit-learn-1.3.0 scipy-1.11.1 threadpoolctl-3.1.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -307,17 +495,17 @@
        "       [ 5.  , 10.  , 15.  ]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.preprocessing import Imputer\n",
+    "from sklearn.impute import SimpleImputer\n",
     "\n",
     "# 平均値で欠損値を補完するインスタンスを作成する\n",
     "# strategy : 欠損値を補完する方法を文字列で指定　,axis :補完する値を計算するときに使用する軸を指定、　１：行、0：列（デフォルト） \n",
-    "imp = Imputer(strategy ='mean',axis = 0)\n",
+    "imp = SimpleImputer(strategy ='mean')\n",
     " # 欠損値を補完する\n",
     "imp.fit(df)\n",
     "imp.transform(df)"
@@ -337,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +592,7 @@
        "4  5  c"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
